# socketsender

./: .coveragerc  .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst  installation.rst  socketsender.app.rst  usage.rst
src/socketsender/: __init__.py  callables.py  config.py  exceptions.py  sender.py
src/socketsender/app/: cli.py
src/udpsender/: __init__.py  callables.py  config.py  exceptions.py  sender.py
src/udpsender/app/: cli.py
test/: test_config.py  test_udpsender.py
tests/: callables.py  test_callables.py  test_cli.py  test_config.py  test_sender.py
tests/data/: a.txt  a.yml  b.txt  welp.py
udpsender/: __init__.py  config.py  exceptions.py  sender.py
