[metadata]
name = udpsender
description = 'Send diffent-sized UDP packets to various places on a schedule.'
long_description = file: README.rst
version = attr: udpsender.__version__
author = Bob Forgey
author_email = sesamemucho@grumpydogconsulting.com
url = https://github.com/sesamemucho/udpsender
license = GPLv3
keywords = udp test data generation

[options]
package_dir=
    =src
packages=find:
include_package_data = True
install_requires =
    pyyaml>=5.1.1
    schema>=0.7.0

[options.entry_points]
console_scripts =
    udpsender = udpsender.cmds.sender:main

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
dev =
    black>=19.3b0
    wheel
    mypy

test =
    pytest>=5.0.0
    pytest-cov>=2.7.1
    tox>=2.9.1
    isort>=4.3.21
    flake8>=3.7.7
    flake8-black>=0.1.0

[wheel]
universal = 1

[flake8]
# Recommend matching the black line length (default 88),
# rather than using the flake8 default of 79:
max-line-length = 88
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,

